--- a/styles/style.css
+++ b/styles/style.css
@@ -126,4 +126,12 @@ input::-moz-focus-inner {
   background-color: #e9e9e9;
 }
 
+.hyphenate {
+  overflow-wrap: break-word;
+  word-wrap: break-word;
+  -webkit-hyphens: auto;
+  -ms-hyphens: auto;
+  hyphens: auto;
+}
+
 /*# sourceMappingURL=style.css.map */
