--- a/styles/style.scss
+++ b/styles/style.scss
@@ -135,3 +135,13 @@ input::-moz-focus-inner {
 .active_user{
   background-color: #e9e9e9
 }
+
+
+//перенос слов в сообщениях
+.hyphenate {
+  overflow-wrap: break-word;
+  word-wrap: break-word;
+  -webkit-hyphens: auto;
+  -ms-hyphens: auto;
+  hyphens: auto;
+}
